# Geomeasurer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
geomeasurer/: CMakeLists.txt  CMakeLists.txt~
geomeasurer/bridge/: sensor_bridge.cpp  sensor_bridge.h
geomeasurer/common/: math_supplement.cpp  math_supplement.h  predeal.cpp  predeal.h
geomeasurer/data/: dataflr4scan001  dataflr4scan002  dataflr4scan003  datascan~  groundtruth_fr079  groundtruth_intel_lab~  groundtruth_mit-csail  maptest25.txt  maptest79.txt  scan  scan000.txt  scan002  scan003
geomeasurer/extract_geometry_feature/: .extractgeometryfeature.h.kate-swp  FAKLO_test.cpp  dalko_testlog.cpp  extract_geometry_feature_main.cpp  extractgeometryfeature.cpp  extractgeometryfeature.h  label.cpp
geomeasurer/io/: scan_reader.cpp  scan_reader.h
geomeasurer/sensor/: scan_data.cpp  scan_data.h
geomeasurer/test/: FLIRT_test.cpp  descriptors_assessment.cpp  falseNegtativeRate_test.cpp  repeatabilitytest.cpp  repeatabilitytest.h  repeatativity_test.cpp
geomeasurer/transform/: pose2d.cpp  pose2d.h  transform.cpp  transform.h
geomeasurer/viz/: viz.cpp  viz.h  viz.hpp
